--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@next/font": "^14.2.15",
     "antd": "^5.24.2",
+    "google": "^2.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
