--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
+    "recharts": "^2.15.2",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
